# plotter-rs

./: Cargo.toml
arduino_analog_in_and_light_measure/: arduino_analog_in_and_light_measure.ino
arduino_led_out_and_light_measure/: arduino_led_out_and_light_measure.ino
arduino_measure/: arduino_measure.ino
src/: gui.rs  main.rs  timer.rs
test_data_generator/: Cargo.toml
test_data_generator/src/: main.rs
