[package]
name = "plotter-rs"
version = "0.1.0"
authors = ["Jonathan Nilsson"]

[dependencies]
arrayvec = "0.4.7"
glium = "0.20"
glutin = "0.12"
imgui = { path = "../imgui-rs" }
imgui-glium-renderer = { path = "../imgui-rs/imgui-glium-renderer" }
imgui-sys = { path = "../imgui-rs/imgui-sys" }
nfd = "0.0.4"
time = "0.1.39"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
